Button placement changed

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ http://www.templatemo.com/tm-508-power
                     <div class="col-md-8 col-md-offset-2">
                         <div class="banner-content">
                             <h6>Raspberry Pi Tabanlı Mobil Robot Yarışması</h6>
-                            <h2>Pİ Wars Türkİye</h2>
+                            <h2>Pi Wars Türkİye</h2>
                             <ul class="buttons">
                                 <li>
                                     <div class="primary-button">
@@ -112,7 +112,7 @@ http://www.templatemo.com/tm-508-power
             </tr>
             
         </table>
-        <script type="text/javascript"> <!--countdown clock için javascript kodu-->
+        <script type="text/javascript"> 
             function countDown()
             {
                 var today = new Date();
@@ -160,7 +160,7 @@ http://www.templatemo.com/tm-508-power
                             <div class="icon">
                                 <img src="img/first-service-icon.png" alt=""> <!-- Pi Wars adlı başlığın üstündeki resim -->
                             </div>
-                            <h4>Pİ Wars</h4>
+                            <h4>Pi Wars</h4>
                             <p>PiWars, İngiltere Cambridge Üniversitesinde son 4 yıldır düzenlenen uluslararası bir robotik yarışmasıdır. Bu yarışmada katılımcılar Raspberry Pi kullanarak mobil robotlar üretirler. Robotlar yarışmadaki hem otonom hem de uzaktan kumandalı çeşitli görevleri tamamlayarak puan kazanır ve buna göre sıralandırılırlar.</p>
                         </div>
                     </div>
@@ -169,7 +169,7 @@ http://www.templatemo.com/tm-508-power
                             <div class="icon">
                                 <img src="img/first-service-icon.png" alt=""> <!-- PiWars Türkiye adlı başlığın üstündeki resim -->
                             </div>
-                            <h4>PİWars Türkiye</h4>
+                            <h4>PiWars Türkİye</h4>
                             <p>Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 23 mart tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır.
                                 <br><br><br></p></p>
                         </div>
@@ -179,8 +179,8 @@ http://www.templatemo.com/tm-508-power
                             <div class="icon">
                                 <img src="img/third-service-icon.png" alt=""> <!-- Eğitim adlı başlığın üstündeki resim -->
                             </div>
-                            <h4>Eğitim</h4>
-                            <p>PiWars Türkiye etkinliği, yarışmanın yanı sıra bir de eğitim içerecektir. 2 gün sürecek olan eğitimde, yeterli imkanları olmayan okullardan gelen öğrencilere gerekli malzeme sağlanacak ve kendi robotlarını yapmalarına yardım edilecektir. Eğitime katılan takımlar daha sonra yaptıkları robotlarla yarışmaya katılacaktır.<br><br>  </p>
+                            <h4>Eğİtİm</h4>
+                            <p>PiWars Türkiye etkinliği, yarışmanın yanı sıra bir de eğitim içerecektir. 2 gün sürecek olan eğitimde, yeterli imkanları olmayan okullardan gelen öğrencilere gerekli malzeme sağlanacak ve kendi robotlarını yapmalarına yardım edilecektir. Eğitime katılan takımlar daha sonra yaptıkları robotlarla yarışmaya katılacaktır.<br>  </p>
                         </div>
                     </div> 
                 </div>
@@ -193,7 +193,7 @@ http://www.templatemo.com/tm-508-power
                     <div class="col-md-12">
                         <div class="section-heading">
                             <h4>Yarışmalar</h4>
-                            <p>PiWars etkinliğinde hem otonom hem de uzaktan kumandalı görever bulunur. PiWars Türkiye etkinliği için seçtiğimiz görevleri ve kurallarını aşağıda görebilirsiniz. </p>
+                            <p>PiWars etkinliğinde hem otonom hem de uzaktan kumandalı görever bulunur. PiWars Türkiye etkinliği için seçtiğimiz görevleri ve kurallarını aşağıda görebilirsiniz. </p><br>
                             <div class="primary-button">
                                 <a href="htemel/GenelKurallar.html" target="_parent" rel="nofollow">Genel Kurallar ve kısıtlamalar</a> <!-- Genel kuralların yazılması gerekilen site -->
                             </div>
@@ -267,16 +267,13 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="left-text">
                                                     <h4>PiNoon</h4>
                                                     <p>Pinoon, iki robotun birbirleriyle savaştığı interaktif bir yarışmadır. Amaç diğer robota bağlı balonu, kendi robotunuzdaki iğne ile patlatmaktır.  </p>
-                                                    <div class="primary-button">
-                                                        <a href="htemel/Pinoon.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
-                                                    </div>
+                                                </div>
+                                                <div class="col-md-6">   
                                                 </div>
                                             </div>
-                                            <div class="col-md-6">
-                                                <div class="right-image">
-                                                    <!--
-                                                    <img src="img/right-side-image_1.jpg" alt="">
-                                                -->
+                                            <div class="col-md-6"> 
+                                                <div class="primary-button">
+                                                    <a href="htemel/Pinoon.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -289,16 +286,11 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="left-text">
                                                     <h4>Obstacle Course</h4>
                                                     <p>Obstacle course'ta robotunuz engebeli bir parkurdan geçmeye çalışır. Bu parkuru en kısa zamanda tamamlayan en çok puan kazanır. </p>
-                                                     <div class="primary-button">
-                                                        <a href="htemel/ObstacleCourse.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
-                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
-                                                <div class="right-image">
-                                                    <!--
-                                                    <img src="img/right-side-image_2.jpg" alt="">
-                                                -->
+                                                 <div class="primary-button">
+                                                    <a href="htemel/ObstacleCourse.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -311,17 +303,13 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="left-text">
                                                     <h4>Duck Shoot</h4>
                                                     <p>Duck Shoot, karşınızdaki hedefleri bir fırlatma mekanizmasıyla vurduğunuz veya yerdeki bir topu iterek hedefleri devirmeye çalıştığınız bir yarışmadır. </p>
-                                                    <div class="primary-button">
-                                                        <a href="htemel/DuckShoot.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
-                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
-                                                <div class="right-image">
-                                                    <!--
-                                                    <img src="img/right-side-image_3.jpg" alt="">
-                                                -->
+                                                <div class="primary-button">
+                                                    <a href="htemel/DuckShoot.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                 </div>
+
                                             </div>
                                         </div>
                                     </div>
@@ -333,16 +321,11 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="left-text">
                                                     <h4>Proximity Alert</h4>
                                                     <p>Proximity alert otonom bir görevdir, bir duvara 0.5 metre uzaklıktaki robotunuz, üzerindeki sensörlerle bu duvara çarpmadan olabildiğince yaklaşmaya çalışır. </p>
-                                                    <div class="primary-button">
-                                                        <a href="htemel/ProximityAlert.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
-                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
-                                                <div class="right-image">
-                                                    <!--
-                                                    <img src="img/right-side-image_4.jpg" alt="">
-                                                -->
+                                                 <div class="primary-button">
+                                                    <a href="htemel/ProximityAlert.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -355,17 +338,12 @@ http://www.templatemo.com/tm-508-power
                                                 <div class="left-text">
                                                     <h4>Line Following</h4>
                                                     <p>Line Following görevinde robotunuz beyaz bir yüzey üstündeki siyah çizgiyi takip eder. Çizginin sonuna en hızlı ve üstünde kalarak tamamlayan robot 1. olur. </p>
-                                                    <div class="primary-button">
-                                                        <a href="htemel/LineFollowing.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
-                                                    </div>
 
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
-                                                <div class="right-image">
-                                                    <!--
-                                                    <img src="img/right-side-image_5.jpg" alt="">
-                                                    -->
+                                                <div class="primary-button">
+                                                    <a href="htemel/LineFollowing.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                 </div>
                                             </div>
                                         </div>
