türkçe düzeltmeler yapıldı

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ http://www.templatemo.com/tm-508-power
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="banner-content">
-                            <h6>Raspberry Pi Tabanlı Mobil Robot Yarışması</h6>
-                            <h2>Pİ Wars Türkİye</h2>
+                            <h6>Raspberry Pi Tabanlı Mobİl Robot Yarışması</h6>
+                            <h2>Pi Wars Türkİye</h2>
 			    			<font size="8" color="white">24 Mart 2019</font>
                             <ul class="buttons">
                                 <li>
@@ -161,7 +161,7 @@ http://www.templatemo.com/tm-508-power
                             <div class="icon">
                                 <img src="img/first-service-icon.png" alt=""> <!-- Pi Wars adlı başlığın üstündeki resim -->
                             </div>
-                            <h4>Pİ Wars</h4>
+                            <h4>Pi Wars</h4>
 				<br>
 				<br>
 				<br>
@@ -174,7 +174,7 @@ http://www.templatemo.com/tm-508-power
                             <div class="icon">
                                 <img src="img/first-service-icon.png" alt=""> <!-- PiWars Türkiye adlı başlığın üstündeki resim -->
                             </div>
-                            <h4>PİWars Türkiye</h4>
+                            <h4>PiWars Türkİye</h4>
 				<br>
 				<br>
 				<br>
@@ -188,7 +188,7 @@ http://www.templatemo.com/tm-508-power
                             <div class="icon">
                                 <img src="img/third-service-icon.png" alt=""> <!-- Eğitim adlı başlığın üstündeki resim -->
                             </div>
-                            <h4>Eğitim</h4>
+                            <h4>Eğİtİm</h4>
 				<br>
 				<br>
 				<br>
