--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ http://www.templatemo.com/tm-508-power
                     <div class="section-heading">
                         <h1 style="color: #00bbe5;text-align: left"><b>Sık Sorulan Sorular</b><h1>
                         <div class="col-md-6">
-                            <div class="faqBlock">
+                            <div class="faqBlock1">
                                 <span class="question" style="color:#363e50">Eğitime kimlerin katılması tavsiye edilmektedir?</span>
                                 <span class="answer" style="color:#363e50">Eğitime sadece kendi robotlarını yapmak için yeterli maddi imkana sahip olmayan okulların başvurması teşvik edilmektedir. </span>
                             </div>
