--- a/index.html
+++ b/index.html
@@ -490,34 +490,35 @@ http://www.templatemo.com/tm-508-power
         </section>
 
         <section id= "faq" class="portfolio-section">
-            <div class= "container">
+        	<div class= "container">
                 <div class = "row">
-                    <div class="section-heading">
-                        <h1 style="color: #00bbe5;text-align: left"><b>Sık Sorulan Sorular</b><h1>
-                        <div class="col-md-6">
-                            <div class="faqBlock1">
-                                <span class="question" style="color:#363e50">Eğitime kimlerin katılması tavsiye edilmektedir?</span>
-                                <span class="answer" style="color:#363e50">Eğitime sadece kendi robotlarını yapmak için yeterli maddi imkana sahip olmayan okulların başvurması teşvik edilmektedir. </span>
-                            </div>
-                            <div class="faqBlock">
-                                <span class="question" style="color:#363e50">Eğitime katılmak için önceden bir robotik tecrübesine ihtiyaç var mı?</span>
-                                <span class="answer" style="color:#363e50">Hayır, eğitimdeki herkesin hiçbir şey bilmediği varsayılacaktır. </span>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="faqBlock">
-                                <span class="question" style="color:#363e50">Eğitime katılan takımlar kaçar kişiden oluşmalıdır?</span>
-                                <span class="answer" style="color:#363e50">Bir takımın 3 kişiden oluşması hedeflenmektedir.</span>
-                            </div>
-                            <div class="faqBlock">
-                                <span class="question" style="color:#363e50">Eğitime katılmadan sadece yarışmaya katılabilir miyim?</span>
-                                <span class="answer" style="color:#363e50">Tabi ki! </span>
-                            </div>
-                        </div>
-                    </div>
+                	<div class="section-heading">
+                		<h1 style="color: #00bbe5;text-align: left"><b>Sık Sorulan Sorular</b><h1>
+                				<div class="col-md-6">
+                						<div class="faqBlock1 ">
+                							<span class="question" style="color:#363e50">Eğitime kimlerin katılması tavsiye edilmektedir?</span>
+                                            <span class="answer" style="color:#363e50">Eğitime sadece kendi robotlarını yapmak için yeterli imkana sahip olmayan okulların başvurması teşvik edilmektedir.</span>
+                						</div>
+                                        <div class="faqBlock">
+                                            <span class="question" style="color:#363e50">Eğitime katılmak için önceden bir robotik tecrübesine ihtiyaç var mı?</span>
+                                            <span class="answer" style="color:#363e50">Hayır, eğitimdeki herkesin hiçbir şey bilmediği varsayılacaktır. </span>
+                                        </div>
+                				</div>
+                				<div class="col-md-6">
+                					<div class="faqBlock">
+                                            <span class="question" style="color:#363e50">Eğitime katılan takımlar kaçar kişiden oluşmalıdır?</span>
+                                            <span class="answer" style="color:#363e50">Bir takımın 3 kişiden oluşması hedeflenmektedir.</span>
+                                        </div>
+                                        <div class="faqBlock">
+                                            <span class="question" style="color:#363e50">Eğitime katılmadan sadece yarışmaya katılabilir miyim?</span>
+                                            <span class="answer" style="color:#363e50">Tabi ki! </span>
+                                        </div>
+                			</div>
+                	</div>
                 </div>
             </div>
         </section>
+
 
         <section id="apply" style="margin-bottom: 75px">
             <div class="container">
