--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ http://www.templatemo.com/tm-508-power
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="banner-content">
-                            <h6>Raspberry Pi Tabanlı Mobil Robot Yarışması</h6>
-                            <h2>Pİ Wars Türkİye</h2>
-			    			<font size="8" color="white">24 Mart 2019</font>
+                            <h6>Raspberry Pi Tabanlı Mobİl Robot Yarışması</h6>
+                            <h2>Pi Wars Türkİye</h2>
+                            <h3>24 Mart 2019</h3>
                             <ul class="buttons">
                                 <li>
                                     <div class="primary-button">
