--- a/index.html
+++ b/index.html
@@ -561,76 +561,76 @@ http://www.templatemo.com/tm-508-power
 
         <section id="bizkimiz" style="margin-right: 150px; margin-left: 150px;margin-bottom: 75px">
             <h2 style="text-align: center;margin-bottom: 50px;font-size: 35px; color: black">Biz Kimiz?</h2>
-			<center>Biz, Hisar Lisesinde okuyan ve Computer Science bölümüne ilgi duyan öğrencileriz.</center>
             <div class="sira1">
  			 <div class="foto">
-    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<img src="img/liora.jpeg" alt="Snow" style="width:250px; height: 250px;" class="image">
     			<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Can.</div>
+                  <div class="text">liora.nasi@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center><font size="4">Liora Nasi</font></center>
+                <center>Görev</center>
   			 </div>
   			 <div class="foto">
-   				<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+   				<img src="img/duncu.jpeg" alt="Snow" style="width:250px; height: 250px;" class="image">
    				<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Emre.</div>
+                  <div class="text">deniz.uncu@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center><font size="4">Deniz Uncu</font></center>
+                <center>Görev</center>
   			 </div>
   			 <div class="foto">
-   				<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+   				<img src="img/selinoner.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
    				<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Emre.</div>
+                  <div class="text">selin.oner@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center><font size="4">Selin Öner</font></center>
+                <center>Görev</center>
   			 </div>
   			 <div class="foto">
-    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<img src="img/canersoz.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
     			<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Can.</div>
+                  <div class="text">can.ersoz@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center><font size="4">Can Ersöz</font></center>
+                <center>Görev</center>
   			 </div>
   			 
 			</div>
 			<div class="sira1">
  			 <div class="foto">
-    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<img src="img/batuhan.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
     			<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Can.</div>
+                  <div class="textbat">batuhan.bayraktar@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center><font size="4">Batuhan Bayraktar</font></center>
+                <center>Görev</center>
   			 </div>
   			 <div class="foto">
-   				<img src="img/blog-post-3.jpg" alt="Forest" style="width:100%" class="image">
+   				<img src="img/emreotay.jpeg" alt="Forest" style="width: 250px; height: 250px;" class="image">
    				<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Emre.</div>
+                  <div class="text">emre.otay@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center><font size="4">Emre Otay</font></center>
+                <center>Görev</center>
   			 </div>
   			 <div class="foto">
-    			<img src="img/blog-post-3.jpg" alt="Mountains" style="width:100%" class="image">
+    			<img src="img/nadintamer.jpeg" alt="Mountains" style="width: 250px; height: 250px;" class="image">
     			<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Batuhan.</div>
+                  <div class="text">nadin.tamer@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center><font size="4">Nadin Tamer</font></center>
+                <center>Görev</center>
   			 </div>
   			 <div class="foto">
-    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<img src="img/canaydin.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
     			<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Can.</div>
+                  <div class="text">can.aydin@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center><font size="4">Can Aydin</font></center>
+                <center>Görev</center>
   			 </div>
 			</div>
+            <!--
 			<div class="sira1">
  			 <div class="foto">
     			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
@@ -638,7 +638,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">Merhaba. Benim adım Can.</div>
                 </div>
                 <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center>Görev</center>
   			 </div>
   			 <div class="foto">
    				<img src="img/blog-post-3.jpg" alt="Forest" style="width:100%" class="image">
@@ -646,7 +646,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">Merhaba. Benim adım Emre.</div>
                 </div>
                 <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center>Görev</center>
   			 </div>
   			 <div class="foto">
     			<img src="img/blog-post-3.jpg" alt="Mountains" style="width:100%" class="image">
@@ -654,7 +654,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">Merhaba. Benim adım Batuhan.</div>
                 </div>
                 <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center>Görev</center>
   			 </div>
   			   			 <div class="foto">
     			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
@@ -662,9 +662,10 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">Merhaba. Benim adım Can.</div>
                 </div>
                 <center><font size="4">Emre</font></center>
-                <center>CEO</center>
+                <center>Görev</center>
   			 </div>
 		  </div>
+        -->
         </section>
 
 <!--______________________________________________________________________________________________-->
