--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">liora.nasi@ggl.hisarschool.k12.tr</div>
                 </div>
                 <center><font size="4">Liora Nasi</font></center>
-                <center>Görev</center>
+                <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
    				<img src="img/duncu.jpeg" alt="Snow" style="width:250px; height: 250px;" class="image">
@@ -583,7 +583,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">deniz.uncu@ggl.hisarschool.k12.tr</div>
                 </div>
                 <center><font size="4">Deniz Uncu</font></center>
-                <center>Görev</center>
+                <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
    				<img src="img/selinoner.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
@@ -591,7 +591,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">selin.oner@ggl.hisarschool.k12.tr</div>
                 </div>
                 <center><font size="4">Selin Öner</font></center>
-                <center>Görev</center>
+                <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
     			<img src="img/canersoz.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
@@ -599,7 +599,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">can.ersoz@ggl.hisarschool.k12.tr</div>
                 </div>
                 <center><font size="4">Can Ersöz</font></center>
-                <center>Görev</center>
+                <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 
 			</div>
@@ -610,7 +610,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="textbat">batuhan.bayraktar@ggl.hisarschool.k12.tr</div>
                 </div>
                 <center><font size="4">Batuhan Bayraktar</font></center>
-                <center>Görev</center>
+                <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
    				<img src="img/emreotay.jpeg" alt="Forest" style="width: 250px; height: 250px;" class="image">
@@ -618,7 +618,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">emre.otay@ggl.hisarschool.k12.tr</div>
                 </div>
                 <center><font size="4">Emre Otay</font></center>
-                <center>Görev</center>
+                <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
     			<img src="img/nadintamer.jpeg" alt="Mountains" style="width: 250px; height: 250px;" class="image">
@@ -626,7 +626,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">nadin.tamer@ggl.hisarschool.k12.tr</div>
                 </div>
                 <center><font size="4">Nadin Tamer</font></center>
-                <center>Görev</center>
+                <center><!--Görevin geldiği yer--></center>
   			 </div>
   			 <div class="foto">
     			<img src="img/canaydin.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
@@ -634,7 +634,7 @@ http://www.templatemo.com/tm-508-power
                   <div class="text">can.aydin@ggl.hisarschool.k12.tr</div>
                 </div>
                 <center><font size="4">Can Aydin</font></center>
-                <center>Görev</center>
+                <center><!--Görevin geldiği yer--></center>
   			 </div>
 			</div>
             <!--
