--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ http://www.templatemo.com/tm-508-power
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="right-image">
-                                                    <div class="primary-button">
+                                                    <div class="primary-button" style="margin-top: 25px; margin-left: 50px">
                                                         <a href="htemel/Pinoon.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                     </div>
                                                 </div>
@@ -300,7 +300,7 @@ http://www.templatemo.com/tm-508-power
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="right-image">
-                                                     <div class="primary-button">
+                                                     <div class="primary-button" style="margin-top: 25px; margin-left: 50px">
                                                         <a href="htemel/ObstacleCourse.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                     </div>
                                                 </div>
@@ -319,7 +319,7 @@ http://www.templatemo.com/tm-508-power
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="right-image">
-                                                    <div class="primary-button">
+                                                    <div class="primary-button" style="margin-top: 25px; margin-left: 50px">
                                                         <a href="htemel/DuckShoot.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                     </div>
                                                 </div>
@@ -338,7 +338,7 @@ http://www.templatemo.com/tm-508-power
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="right-image">
-                                                    <div class="primary-button">
+                                                    <div class="primary-button" style="margin-top: 25px; margin-left: 50px">
                                                         <a href="htemel/ProximityAlert.html" target="_parent" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                     </div>
                                                 </div>
@@ -357,7 +357,7 @@ http://www.templatemo.com/tm-508-power
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="right-image">
-                                                    <div class="primary-button">
+                                                    <div class="primary-button" style="margin-top: 25px; margin-left: 50px">
                                                         <a href="htemel/LineFollowing.html" rel="nofollow">Detaylı bilgi ve Kurallar</a>
                                                     </div>
                                                 </div>
