Fixed backgrond of some images

--- a/htemel/DuckShoot.html
+++ b/htemel/DuckShoot.html
@@ -79,7 +79,7 @@
                             <ul><li> Olabildiğince fazla hedef vurmak </li></ul>
 
                             <h2> Kontrol Methodu </h2>
-                            <img class="size-full wp-image-4406" src="../img/Duckshoot.jpg" alt="" width="500" height="250" >
+                            <img class="size-full wp-image-4406" src="../img/Duckshoot.png" alt="" width="500" height="250" >
                             <ul><li> Kumanda kontrollü </li></ul>
                        
                             <h2> Süre </h2>
