--- a/htemel/ProximityAlert.html
+++ b/htemel/ProximityAlert.html
@@ -79,7 +79,7 @@
                             <ul><li> Robotunuz otonom olarak hareket edecek ve başlangıç noktasından 1 metre uzaktaki tahta duvara çarpmaktan sensörler kullanarak kaçınacak. Bunu toplamda 3 kere yapacak. Her yaklaşma ve durmada robotunuzu tekrar başlangıç çizgisine taşıyacaksınız. Robotun hiçbir bölümü duvara dokunamaz  </li></ul>
 
                             <h2> Kontrol Methodu </h2>
-                            <img class="size-full wp-image-4406" src="../img/ProximityAlert.jpg" alt="" width="500" height="330" >
+                            <img class="size-full wp-image-4406" src="../img/ProximityAlert.png" alt="" width="500" height="330" >
                             <ul><li> Otonom </li></ul>
                        
                             <h2> Süre </h2>
@@ -105,7 +105,7 @@
                             </ul>
                             <h3>Ekstra Puanlar</h3>
 
-                            <img class="size-full wp-image-4406" src="../img/ProximityAlert2.jpg" alt="" width="250" height="250" >
+                            <img class="size-full wp-image-4406" src="../img/ProximityAlert2.png" alt="" width="250" height="250" >
                             <ul>
                                 <li>Her başarılı yaklaşma ve durma 5 puan değerindedir. </li>
                             </ul>
