--- a/htemel/DuckShoot.html
+++ b/htemel/DuckShoot.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="../css/templatemo_style.css">
         <link rel="stylesheet" href="../css/yarismalar.css">
         <link rel="stylesheet" href="../css/owl-carousel.css">
+        <link rel="stylesheet" href="../css/Yarismalar.css">
         <link rel="stylesheet" type="../text/css" href="../css/style.css"> 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script> 
     </head>
