--- a/index.html
+++ b/index.html
@@ -638,32 +638,33 @@ http://www.templatemo.com/tm-508-power
                 <center><!--Görevin geldiği yer--></center>
   			 </div>
 			</div>
-            <!--
-			<div class="sira1">
+            
+<div class="sira1">
  			 <div class="foto">
-    			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
+    			<img src="img/ben.jpeg" alt="Snow" style="width: 250px; height: 250px;" class="image">
     			<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Can.</div>
+                  <div class="text">emre.cagin@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>Görev</center>
+                <center><font size="4">Emre Çağın</font></center>
+                <center></center>
   			 </div>
   			 <div class="foto">
-   				<img src="img/blog-post-3.jpg" alt="Forest" style="width:100%" class="image">
+   				<img src="img/umutolmez.jpeg" alt="Forest" style="width: 250px; height: 250px;" class="image">
    				<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Emre.</div>
+                  <div class="text">umut.olmez@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>Görev</center>
+                <center><font size="4">Umut Ölmez</font></center>
+                <center></center>
   			 </div>
   			 <div class="foto">
-    			<img src="img/blog-post-3.jpg" alt="Mountains" style="width:100%" class="image">
+    			<img src="img/yoelkastro.jpeg" alt="Mountains" style="width: 250px; height: 250px;" class="image">
     			<div class="foto-layer_top">
-                  <div class="text">Merhaba. Benim adım Batuhan.</div>
+                  <div class="text">yoel.kastro@ggl.hisarschool.k12.tr</div>
                 </div>
-                <center><font size="4">Emre</font></center>
-                <center>Görev</center>
+                <center><font size="4">Yoel Kastro</font></center>
+                <center></center>
   			 </div>
+             <!--
   			   			 <div class="foto">
     			<img src="img/blog-post-3.jpg" alt="Snow" style="width:100%" class="image">
     			<div class="foto-layer_top">
@@ -672,8 +673,11 @@ http://www.templatemo.com/tm-508-power
                 <center><font size="4">Emre</font></center>
                 <center>Görev</center>
   			 </div>
+            -->
 		  </div>
-        -->
+
+		  </div>
+        
         </section>
 
 <!--______________________________________________________________________________________________-->
