--- a/index.html
+++ b/index.html
@@ -153,12 +153,10 @@ http://www.templatemo.com/tm-508-power
                     <div class="col-md-4">
                         <div class="service-item first-service">
                             <div class="icon">
-                                <img src="img/first-service-icon.png" alt=""> <!-- Pi Wars adlı başlığın üstündeki resim -->
+                                <img src="img/piwars.png" alt="" style="width: 75px; height: 75px;"> <!-- Pi Wars adlı başlığın üstündeki resim -->
                             </div>
                             <h4>Pİ Wars</h4>
-				<br>
-				<br>
-				<br>
+
                             <p>PiWars, İngiltere Cambridge Üniversitesinde son 4 yıldır düzenlenen uluslararası bir robotik yarışmasıdır. Bu yarışmada katılımcılar Raspberry Pi kullanarak mobil robotlar üretirler. Robotlar yarışmadaki hem otonom hem de uzaktan kumandalı çeşitli görevleri tamamlayarak puan kazanır ve buna göre sıralandırılırlar.</p>
 			    
                         </div>
@@ -166,26 +164,19 @@ http://www.templatemo.com/tm-508-power
                     <div class="col-md-4">
                         <div class="service-item second-service">
                             <div class="icon">
-                                <img src="img/first-service-icon.png" alt=""> <!-- PiWars Türkiye adlı başlığın üstündeki resim -->
+                                <img src="img/piwarsturkey.png" alt="" style="width: 75px; height: 75px;"> <!-- PiWars Türkiye adlı başlığın üstündeki resim -->
                             </div>
                             <h4>PİWars Türkiye</h4>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-                            <p>Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 23 mart tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır.</p>
+
+                            <p>Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 24 Mart 2019 tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır. Yarışmaya katılmak için Başvur kısmındaki formu doldurmanız gerekmektedir.</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="service-item third-service">
                             <div class="icon">
-                                <img src="img/third-service-icon.png" alt=""> <!-- Eğitim adlı başlığın üstündeki resim -->
+                                <img src="img/education.png" alt="" style="width: 75px; height: 75px;"> <!-- Eğitim adlı başlığın üstündeki resim -->
                             </div>
                             <h4>Eğitim</h4>
-				<br>
-				<br>
-				<br>
                             <p>PiWars Türkiye etkinliği, yarışmanın yanı sıra bir de eğitim içerecektir. 2 gün sürecek olan eğitimde, yeterli imkanları olmayan okullardan gelen öğrencilere gerekli malzeme sağlanacak ve kendi robotlarını yapmalarına yardım edilecektir. Eğitime katılan takımlar daha sonra yaptıkları robotlarla yarışmaya katılacaktır.</p>
                         </div>
                     </div> 
