--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@ http://www.templatemo.com/tm-508-power
             </div>
         </div>
 
-<video  height="100%" width="100%" autoplay="autoplay" muted="muted" loop="loop" id="myvideo" >
+<!--<video  height="100%" width="100%" autoplay="autoplay" muted="muted" loop="loop" id="myvideo" >
         <source src="img/maingif.mp4" type="video/mp4">
-        </video> 
+        </video> -->
 
         <div class="intro">
             <div class="container">
