very good very good

--- a/index.html
+++ b/index.html
@@ -682,10 +682,10 @@ http://www.templatemo.com/tm-508-power
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <ul class="social-icons">
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Twitter</a></li>
-                            <li><a href="#">Linkedin</a></li>
-                            <li><a href="#">Instagram</a></li>
+                            <li><a href="#"><img src="img/facebooklogo.png" style="width: 45px; height: 45px"></a></li>
+                            <li><a href="#"><a href="#"><img src="img/twitterlogo.png" style="width: 45px; height: 45px"></a></a></li>
+                            <li><a href="#"><a href="#"><img src="img/linkedinlogo.png" style="width: 45px; height: 45px"></a></a></li>
+                            <li><a href="#"><a href="#"><img src="img/instagramlogo.png" style="width: 45px; height: 45px"></a></a></li>
                         </ul>
                     </div>
                     <div class="col-md-2 col-md-offset-2 col-sm-12">
